--- a/src/style.css
+++ b/src/style.css
@@ -32,6 +32,10 @@ body {
   transition: all 0.3s linear;
 }
 
+.transitionImg {
+  transition: all 0.6s linear
+}
+
 @layer components {
   .transition {
     @apply transition-all ease-linear duration-100;
