--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -13,6 +13,15 @@ img {
     --animate-duration: 4s;
 }
 
+@keyframes pulse {
+    0% { opacity: 0.6; }
+    50% { opacity: 1; }
+    100% { opacity: 0.6; }
+}
+.animate-pulse {
+    animation: pulse 1.5s infinite ease-in-out;
+}
+
 @media (max-width: 1280px){
     html {
         font-size: 12.222px !important;
