Partners Slide: applied grayscale filter

--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -13,6 +13,10 @@ img {
     --animate-duration: 4s;
 }
 
+.transitionEffect {
+    transition: all 0.3s linear;
+}
+
 @keyframes pulse {
     0% { opacity: 0.6; }
     50% { opacity: 1; }
